dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)

AC_INIT([wxarchive],[0.1.0],[mweth@users.sf.net])

AC_CONFIG_SRCDIR([src/tarstrm.cpp])

AC_CANONICAL_BUILD
AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_OPTIONS_WXCONFIG

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CXXCPP

AM_PATH_WXCONFIG(2.5.4, WXFOUND=1)

if test "$WXFOUND" != 1; then
    AC_MSG_ERROR([
        Please check that wx-config is in path, the directory
        where wxWindows libraries are installed (returned by
        'wx-config --libs' command) is in LD_LIBRARY_PATH or
        equivalent variable and wxWindows is version 2.5.4 or above.
    ])
fi

MAKEFILES=samples/Makefile

dnl Add tests to the list of makefiles if cppunit 1.8.0+ is detected
AM_PATH_CPPUNIT(1.8.0, [MAKEFILES="$MAKEFILES tests/Makefile"])

AC_BAKEFILE([m4_include(autoconf_inc.m4)])

AC_CONFIG_FILES([$MAKEFILES])

AC_OUTPUT
